# Seg2Act

./: README.md  pyproject.toml
playgroud/: README.md
seg2act/data/ChCatExt/: generate_test.py  seg2act_format.py  seg2act_t_format.py  tracer_format.py
seg2act/data/HierDoc/: generate_test.py  seg2act_format.py
seg2act/eval/: eval_utils.py
seg2act/eval/ChCatExt/: metrics.py  seg2act_eval.py  seg2act_t_eval.py
seg2act/eval/HierDoc/: metrics.py  seg2act_eval.py
seg2act/train/: train_lora.py
seg2act/utils/: node.py  utils.py
